images now visible on deployed site correct file path

--- a/assets/css/styles-2.css
+++ b/assets/css/styles-2.css
@@ -80,14 +80,13 @@ h3{
     position: relative;
     top: -75px;
 }
+.hero{
+width: 100%;
 
-.hero-image{
-    background: url(/assets/images/hero.jpg) no-repeat center center fixed; 
-    background-size: cover;
-    width: 100%;
-    height: 500px;
-    max-width: 100%;
 }
+
+
+
 
 .hero-border{
     position: relative;
@@ -110,7 +109,7 @@ h3{
     .text-overlay{
     position: absolute;
     top: 25%;
-    left: 25%;
+    left: 40%;
     width: 200px;
     background-color: rgba(130, 136, 130, 0.3);
     border-radius: 10px;
